--- a/index.html
+++ b/index.html
@@ -1,122 +1,221 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>Tic Tac Toe</title>
     <style>
-      .square {
-        width: 50px;
-        height: 50px;
-        border: 1px solid black;
-        text-align: center;
-        font-size: 24px;
-      }
-      .row {
+      /* Add some style to the game */
+      .game {
         display: flex;
+        flex-wrap: wrap;
+        width: 300px;
+        height: 300px;
+        border: 1px solid black;
+      }
+      .square {
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 48px;
+        font-weight: bold;
+        cursor: pointer;
       }
     </style>
   </head>
   <body>
     <div class="game">
-      <div class="row">
-        <div class="square" id="0"></div>
-        <div class="square" id="1"></div>
-        <div class="square" id="2"></div>
-      </div>
-      <div class="row">
-        <div class="square" id="3"></div>
-        <div class="square" id="4"></div>
-        <div class="square" id="5"></div>
-      </div>
-      <div class="row">
-        <div class="square" id="6"></div>
-        <div class="square" id="7"></div>
-        <div class="square" id="8"></div>
-      </div>
+      <!-- Create nine squares for the tic-tac-toe board -->
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
     </div>
-    <button id="reset">Reset</button>
-    <script>
-      const squares = document.querySelectorAll(".square");
-      const resetButton = document.querySelector("#reset");
-      let currentPlayer = "X";
-      let gameOver = false;
-      function resetGame() {
-        currentPlayer = "X";
-        gameOver = false;
-        squares.forEach((square) => {
-          square.textContent = "";
-        });
-      }
-
-      function makeMove(square) {
-        if (gameOver || square.textContent !== "") {
-          return;
-        }
-        square.textContent = currentPlayer;
-        checkForWin();
-        if (gameOver) {
-          return;
-        }
-        currentPlayer = currentPlayer === "X" ? "O" : "X";
-      }
-
-      function checkForWin() {
-        // check rows
-        for (let i = 0; i < 9; i += 3) {
-          if (
-            squares[i].textContent === squares[i + 1].textContent &&
-            squares[i].textContent === squares[i + 2].textContent &&
-            squares[i].textContent !== ""
-          ) {
-            gameOver = true;
-            return;
-          }
-        }
-        // check columns
-        for (let i = 0; i < 3; i++) {
-          if (
-            squares[i].textContent === squares[i + 3].textContent &&
-            squares[i].textContent === squares[i + 6].textContent &&
-            squares[i].textContent !== ""
-          ) {
-            gameOver = true;
-            return;
-          }
-        }
-        // check diagonals
-        if (
-          squares[0].textContent === squares[4].textContent &&
-          squares[0].textContent === squares[8].textContent &&
-          squares[0].textContent !== ""
-        ) {
-          gameOver = true;
-          return;
-        }
-        if (
-          squares[2].textContent === squares[4].textContent &&
-          squares[2].textContent === squares[6].textContent &&
-          squares[2].textContent !== ""
-        ) {
-          gameOver = true;
-          return;
-        }
-        // check for draw
-        let emptySquares = false;
-        squares.forEach((square) => {
-          if (square.textContent === "") {
-            emptySquares = true;
-          }
-        });
-        if (!emptySquares) {
-          gameOver = true;
-        }
-      }
-
-      squares.forEach((square) => {
-        square.addEventListener("click", () => {
-          makeMove(square);
-        });
-      });
-      resetButton.addEventListener("click", resetGame);
-    </script>
   </body>
+  <script>
+    // Keep track of the game state
+    const squares = document.querySelectorAll(".square");
+    let currentPlayer = "X";
+    let gameOver = false;
+    let gameState = [
+      ["", "", ""],
+      ["", "", ""],
+      ["", "", ""],
+    ];
+
+    // Add an event listener to each square to handle clicks
+    squares.forEach((square) => {
+      square.addEventListener("click", handleClick);
+    });
+
+    function handleClick(event) {
+      // Ignore clicks if the game is over or if the square is already filled
+      if (gameOver || event.target.textContent !== "") {
+        return;
+      }
+
+      // Place the current player's symbol in the square
+      event.target.textContent = currentPlayer;
+
+      // Update the game state
+      const row = Math.floor(event.target.id / 3);
+      const col = event.target.id % 3;
+      gameState[row][col] = currentPlayer;
+
+      // Check for a win or a draw
+      const result = checkResult(gameState, currentPlayer);
+      if (result === "X" || result === "O") {
+        // Game over - show a message and disable clicks on the squares
+        gameOver = true;
+        alert(`Player ${result} wins!`);
+        squares.forEach((square) => {
+          square.removeEventListener("click", handleClick);
+        });
+      } else if (result === "draw") {
+        // Game over - show a message and disable clicks on the squares
+        gameOver = true;
+        alert(`It's a draw!`);
+        squares.forEach((square) => {
+          square.removeEventListener("click", handleClick);
+        });
+      } else {
+        // Switch players
+        currentPlayer = currentPlayer === "X" ? "O" : "X";
+
+        // If it's the computer's turn, let the computer make a move
+        if (currentPlayer === "O") {
+          makeComputerMove();
+        }
+      }
+    }
+
+    function checkResult(gameState, player) {
+      // Check for a win by checking all rows, columns, and diagonals
+      if (
+        (gameState[0][0] === player &&
+          gameState[0][1] === player &&
+          gameState[0][2] === player) ||
+        (gameState[1][0] === player &&
+          gameState[1][1] === player &&
+          gameState[1][2] === player) ||
+        (gameState[2][0] === player &&
+          gameState[2][1] === player &&
+          gameState[2][2] === player) ||
+        (gameState[0][0] === player &&
+          gameState[1][0] === player &&
+          gameState[2][0] === player) ||
+        (gameState[0][1] === player &&
+          gameState[1][1] === player &&
+          gameState[2][1] === player) ||
+        (gameState[0][2] === player &&
+          gameState[1][2] === player &&
+          gameState[2][2] === player) ||
+        (gameState[0][0] === player &&
+          gameState[1][1] === player &&
+          gameState[2][2] === player) ||
+        (gameState[0][2] === player &&
+          gameState[1][1] === player &&
+          gameState[2][0] === player)
+      ) {
+        return player;
+      }
+
+      // Check for a draw by checking if all squares are filled
+      for (let i = 0; i < gameState.length; i++) {
+        for (let j = 0; j < gameState[i].length; j++) {
+          if (gameState[i][j] === "") {
+            return "";
+          }
+        }
+      }
+
+      return "draw";
+    }
+
+    function makeComputerMove() {
+      // Use the minimax algorithm to find the best move for the computer
+      let bestScore = -Infinity;
+      let bestRow = null;
+      let bestCol = null;
+      for (let row = 0; row < gameState.length; row++) {
+        for (let col = 0; col < gameState[row].length; col++) {
+          if (gameState[row][col] === "") {
+            gameState[row][col] = "O";
+            const score = minimax(gameState, 0, false);
+            gameState[row][col] = "";
+            if (score > bestScore) {
+              bestScore = score;
+              bestRow = row;
+              bestCol = col;
+            }
+          }
+        }
+      }
+
+      // Make the best move
+      gameState[bestRow][bestCol] = "O";
+      squares[bestRow * 3 + bestCol].textContent = "O";
+      currentPlayer = "X";
+
+      // Check for a win or a draw
+      const result = checkResult(gameState, "O");
+      if (result === "O") {
+        // Game over - show a message and disable clicks on the squares
+        gameOver = true;
+        alert(`Player O wins!`);
+        squares.forEach((square) => {
+          square.removeEventListener("click", handleClick);
+        });
+      } else if (result === "draw") {
+        // Game over - show a message and disable clicks on the squares
+        gameOver = true;
+        alert(`It's a draw!`);
+        squares.forEach((square) => {
+          square.removeEventListener("click", handleClick);
+        });
+      }
+    }
+
+    function minimax(gameState, depth, isMaximizing) {
+      const result = checkResult(gameState, isMaximizing ? "O" : "X");
+      if (result === "O") {
+        return 10 - depth;
+      } else if (result === "X") {
+        return depth - 10;
+      } else if (result === "draw") {
+        return 0;
+      }
+
+      if (isMaximizing) {
+        let bestScore = -Infinity;
+        for (let row = 0; row < gameState.length; row++) {
+          for (let col = 0; col < gameState[row].length; col++) {
+            if (gameState[row][col] === "") {
+              gameState[row][col] = "O";
+              const score = minimax(gameState, depth + 1, false);
+              gameState[row][col] = "";
+              bestScore = Math.max(bestScore, score);
+            }
+          }
+        }
+        return bestScore;
+      } else {
+        let bestScore = Infinity;
+        for (let row = 0; row < gameState.length; row++) {
+          for (let col = 0; col < gameState[row].length; col++) {
+            if (gameState[row][col] === "") {
+              gameState[row][col] = "X";
+              const score = minimax(gameState, depth + 1, true);
+              gameState[row][col] = "";
+              bestScore = Math.min(bestScore, score);
+            }
+          }
+        }
+        return bestScore;
+      }
+    }
+  </script>
 </html>
