--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <style>
+      body{width: 100vw;}
       /* Add some style to the game */
       .game {
         display: flex;
