remove old version; edit readme to link /dist

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <style>
-      body{width: 100vw;}
+      body{width: 350px;}
       /* Add some style to the game */
       .game {
         display: flex;
