old-style fix for body

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <style>
-      body{width: 350px;}
+      body{width: 350px;margin:auto;padding: 1%;}
       /* Add some style to the game */
       .game {
         display: flex;
